Version 2.0.0rc6 - The '???' version.
----------
2004-0?-??

	GonoszTopi:
		* Patch to fix buffer overflow in cas when line had more than
		  80 chars.
		* Patch to fix help switch in ExternalConnector.cpp

	Hetfield:
		* Lots of 3.4.x compilation fixes, due to -DWX_PRECOMP
		  and wx headers checks.
		* Configure cleanup, safetray remove and nice cosmetics for tools
		* Configure option added: --enable-embedded_crypto to use amule crypto code
		and bypass crypto libs. Also fix freeze problem.
		* fixed crypto usage in core with configure and compilation flags
		* Re-enable Pentium4 and SSE2 optimizations fro Crypto stuff

	Jacobo:
		* Fixed issue on the About button.

	Kry:
		* Got back from hell.

	Littletux:
		* Patch to include UTF-8 support in systray.

	Phoenix:
		* Fixed a compilation warning + appartently useless code in 
		  DirectoryTree.cpp.
		* Fixed amuleIPV4Address for wx-2.5.2 and up.
		* Fixed the low number of sources problem with wx-2.5.2 and
		  up. Problem was in CUDPSocket::SendBuffer, now there is a
		  macro to test. aMule should be 2.5.2 network ready now.
		* wxCHECK_VERSION(2,5,0) no longer necessary in
		  amule{web,cmd} for wxApp because we have now -DwxUSE_GUI=0.
		* New command line parameter in amulecmd: -pw or --password.
		* New commands in amulecmd: serverconnect, reloadipf and
		  setipfilter. Thanks rommel for the initial patch.
		* Fixed amulecmd command parser. Help was not coherent and
		  giving syntar errors.
		* Rewrote command parser/processor im amulecmd to use
		  wxStrings.
		* Some i18n stuff in amulecmd.
		* Rewrote amulecmd and amuleweb, creating a new module,
		  ExternalConnector.cpp. This module has a lot of code
		  common to both programs, and will make it easier to
		  maintain.
		* Fixed a small wxString bug in CamuleDlg::AddLogLine() 
		  in amuleDlg.cpp.
		* Improoved wxSting usage in ExternalConn.cpp.
		* Yielding in DownloadQueue.cpp Init() so that gui is not 
		  blank when loading lots of files.